<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/home_act_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/powder"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/home_act_home_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_page"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_bottom" />

        <TextView
            android:id="@+id/home_act_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/square"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_bottom" />

        <TextView
            android:id="@+id/home_act_personal_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/personal_center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_bottom" />

        <TextView
            android:id="@+id/home_act_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/release"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_home_bottom" />
    </LinearLayout>
    <RelativeLayout 
        android:id="@+id/home_act_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/home_act_bottom_menu"
        android:background="@drawable/"
        ></RelativeLayout>

</RelativeLayout>